--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pyrogram==2.0.106
-tgcrypto==1.2.5
-pytgcalls==4.0.0b3
-yt-dlp==2023.12.30
-aiohttp==3.9.1
-motor==3.3.2
-python-dotenv==1.0.0
-youtube-search-python==1.6.6
-pymongo==4.6.1
-cryptg==0.4.0
-setuptools>=65.5.1
-wheel>=0.38.0 
+pyrogram
+tgcrypto
+pytgcalls
+yt-dlp
+aiohttp
+motor
+python-dotenv
+youtube-search-python
+pymongo
+cryptg
+setuptools
+wheel
